<resources>
    <string name="app_name">mendona-HabitTracker</string>
    <string name="add_habit">Add habit</string>
    <string name="delete_habit">Delete habit</string>
    <string name="see_completions">See/Delete completions</string>

    <string name="add_habit_date_text">Choose original date</string>
    <string name="add_habit_name_hint">Habit Name</string>
    <string name="add_habit_weekday_hint">Days of the week (Su, Mo, Tu, We, Th, Fr, Sa)</string>
    <string name="invalid_habit">This habit is not valid. Try again</string>

    <string name="add_habit_dialog_title">Please input information about the new habit</string>

    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>

    <string name="complete_habit_dialog_title">Complete habit for today?</string>

    <string name="choose_habit_to_see_completions">Choose habit to see completions</string>
    <string name="see_completions_title">Click on a completion to delete it</string>

    <string name="choose_habit">Choose habit</string>

    <string name="delete_habit_confirm">Are you sure you want to delete this habit?</string>
    <string name="delete_completion_confirm">Are you sure you want to delete this completion?</string>

    <string name="show_stats">Show stats about a habit</string>

    <string name="times_habit_completed">Times habit has been completed: </string>
    <string name="times_habit_fulfilled">Times habit has been fulfilled: </string>
</resources>
