<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    >

    <Button
        android:id="@+id/add_habit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/add_habit_date_text"/>

    <EditText
        android:id="@+id/add_habit_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:inputType="text"
        android:hint="@string/add_habit_name_hint"/>

    <EditText
        android:id="@+id/add_habit_weekday"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:inputType="text"
        android:hint="@string/add_habit_weekday_hint"/>

</LinearLayout>
