<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/today_date_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/habit_list"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".HabitListView"
        style="@android:style/TextAppearance.Holo.Medium">
    </ListView>

    <Button
        android:id="@+id/see_completions_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/see_completions"/>

    <Button
        android:id="@+id/add_habit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:text="@string/add_habit"/>

    <Button
        android:id="@+id/delete_habit_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_habit"/>

    <Button
        android:id="@+id/show_stats_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/show_stats"/>


</LinearLayout>